Add cost bias correction and hyperparameter tuning

--- a/op_pipeline_total_share_v3_1.ipynb
+++ b/op_pipeline_total_share_v3_1.ipynb
@@ -969,37 +969,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stage1B — 비용 (변동비 단가 h=9, 고정비 h=12; 고정비 X에서 sv/ns 제외)\n",
-    "X_cols_s1b_var = [\"month\",\"quarter\",\"month_sin\",\"month_cos\",\"linked_share\",\"regime\"] + \\\n",
-    "                 [c for c in train.columns if c.startswith(\"lc_\")] + \\\n",
-    "                 [\"sales_volume\",\"net_sales_pred\",\"raw_material_per_unit\"]\n",
-    "X_cols_s1b_fix = [\"month\",\"quarter\",\"month_sin\",\"month_cos\",\"linked_share\",\"regime\"] + \\\n",
-    "                 [c for c in train.columns if c.startswith(\"lc_\")] + \\\n",
-    "                 [\"raw_material_per_unit\"]\n",
-    "\n",
-    "def fit_xgb(): return xgb.XGBRegressor(n_estimators=600, learning_rate=0.05, max_depth=4, subsample=0.9, colsample_bytree=0.9,\n",
-    "                                       objective=\"reg:squarederror\", random_state=42, n_jobs=0)\n",
-    "\n",
-    "w_s1b_var = make_time_weights(train[\"date\"], 9, 0.10)\n",
-    "m_mfg_u = fit_xgb(); m_mfg_u.fit(train[X_cols_s1b_var].values, train[\"mfg_cost_var_unit\"].values, sample_weight=w_s1b_var)\n",
-    "m_sal_u = fit_xgb(); m_sal_u.fit(train[X_cols_s1b_var].values, train[\"sales_cost_var_unit\"].values, sample_weight=w_s1b_var)\n",
-    "\n",
-    "for df in (train, pred):\n",
-    "    df[\"mfg_cost_var_unit_pred\"]   = m_mfg_u.predict(df[X_cols_s1b_var].values)\n",
-    "    df[\"sales_cost_var_unit_pred\"] = m_sal_u.predict(df[X_cols_s1b_var].values)\n",
-    "\n",
-    "w_s1b_fix = make_time_weights(train[\"date\"], 12, 0.10)\n",
-    "m_fix_mfg = fit_xgb(); m_fix_mfg.fit(train[X_cols_s1b_fix].values, train[\"manufacturing_cost_fix\"].values, sample_weight=w_s1b_fix)\n",
-    "m_fix_sal = fit_xgb(); m_fix_sal.fit(train[X_cols_s1b_fix].values, train[\"sales_cost_fix\"].values,         sample_weight=w_s1b_fix)\n",
-    "m_fix_mai = fit_xgb(); m_fix_mai.fit(train[X_cols_s1b_fix].values, train[\"maintenance_cost_fix\"].values,   sample_weight=w_s1b_fix)\n",
-    "\n",
-    "for df in (train, pred):\n",
-    "    df[\"manufacturing_cost_var_pred\"] = df[\"mfg_cost_var_unit_pred\"] * df[\"sales_volume\"]\n",
-    "    df[\"sales_cost_var_pred\"]         = df[\"sales_cost_var_unit_pred\"] * df[\"sales_volume\"]\n",
-    "    df[\"manufacturing_cost_fix_pred\"] = m_fix_mfg.predict(df[X_cols_s1b_fix].values)\n",
-    "    df[\"sales_cost_fix_pred\"]         = m_fix_sal.predict(df[X_cols_s1b_fix].values)\n",
+    "# Stage1B — 비용 (변동비 단가 h=9, 고정비 h=12; 고정비 X에서 sv/ns 제외)",
+    "X_cols_s1b_var = [\"month\",\"quarter\",\"month_sin\",\"month_cos\",\"linked_share\",\"regime\"] + \\",
+    "                 [c for c in train.columns if c.startswith(\"lc_\")] + \\",
+    "                 [\"sales_volume\",\"net_sales_pred\",\"raw_material_per_unit\"]",
+    "X_cols_s1b_fix = [\"month\",\"quarter\",\"month_sin\",\"month_cos\",\"linked_share\",\"regime\"] + \\",
+    "                 [c for c in train.columns if c.startswith(\"lc_\")] + \\",
+    "                 [\"raw_material_per_unit\"]",
+    "",
+    "def fit_xgb(max_depth=4, learning_rate=0.05): return xgb.XGBRegressor(n_estimators=600, learning_rate=learning_rate, max_depth=max_depth, subsample=0.9, colsample_bytree=0.9,",
+    "                                       objective=\"reg:squarederror\", random_state=42, n_jobs=0)",
+    "",
+    "w_s1b_var = make_time_weights(train[\"date\"], 9, 0.10)",
+    "m_mfg_u = fit_xgb(); m_mfg_u.fit(train[X_cols_s1b_var].values, train[\"mfg_cost_var_unit\"].values, sample_weight=w_s1b_var)",
+    "m_sal_u = fit_xgb(); m_sal_u.fit(train[X_cols_s1b_var].values, train[\"sales_cost_var_unit\"].values, sample_weight=w_s1b_var)",
+    "",
+    "for df in (train, pred):",
+    "    df[\"mfg_cost_var_unit_pred\"]   = m_mfg_u.predict(df[X_cols_s1b_var].values)",
+    "    df[\"sales_cost_var_unit_pred\"] = m_sal_u.predict(df[X_cols_s1b_var].values)",
+    "",
+    "w_s1b_fix = make_time_weights(train[\"date\"], 12, 0.10)",
+    "m_fix_mfg = fit_xgb(); m_fix_mfg.fit(train[X_cols_s1b_fix].values, train[\"manufacturing_cost_fix\"].values, sample_weight=w_s1b_fix)",
+    "m_fix_sal = fit_xgb(); m_fix_sal.fit(train[X_cols_s1b_fix].values, train[\"sales_cost_fix\"].values,         sample_weight=w_s1b_fix)",
+    "m_fix_mai = fit_xgb(); m_fix_mai.fit(train[X_cols_s1b_fix].values, train[\"maintenance_cost_fix\"].values,   sample_weight=w_s1b_fix)",
+    "",
+    "for df in (train, pred):",
+    "    df[\"manufacturing_cost_var_pred\"] = df[\"mfg_cost_var_unit_pred\"] * df[\"sales_volume\"]",
+    "    df[\"sales_cost_var_pred\"]         = df[\"sales_cost_var_unit_pred\"] * df[\"sales_volume\"]",
+    "    df[\"manufacturing_cost_fix_pred\"] = m_fix_mfg.predict(df[X_cols_s1b_fix].values)",
+    "    df[\"sales_cost_fix_pred\"]         = m_fix_sal.predict(df[X_cols_s1b_fix].values)",
     "    df[\"maintenance_cost_fix_pred\"]   = m_fix_mai.predict(df[X_cols_s1b_fix].values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "",
+    "# Cost prediction bias check & correction",
+    "cost_pairs = [",
+    "    (\"manufacturing_cost_var\", \"manufacturing_cost_var_pred\"),",
+    "    (\"sales_cost_var\", \"sales_cost_var_pred\"),",
+    "    (\"manufacturing_cost_fix\", \"manufacturing_cost_fix_pred\"),",
+    "    (\"sales_cost_fix\", \"sales_cost_fix_pred\"),",
+    "    (\"maintenance_cost_fix\", \"maintenance_cost_fix_pred\"),",
+    "]",
+    "",
+    "rows = []",
+    "for actual_col, pred_col in cost_pairs:",
+    "    diff = train[pred_col] - train[actual_col]",
+    "    rows.append({\"cost\": pred_col, \"mean_diff\": float(diff.mean()), \"mean_abs_diff\": float(diff.abs().mean())})",
+    "cost_diff_summary = pd.DataFrame(rows)",
+    "display(cost_diff_summary)",
+    "",
+    "if (cost_diff_summary[\"mean_diff\"] > 0).any():",
+    "    tuned = dict(max_depth=3, learning_rate=0.03)",
+    "    m_mfg_u = fit_xgb(**tuned); m_mfg_u.fit(train[X_cols_s1b_var].values, train[\"mfg_cost_var_unit\"].values, sample_weight=w_s1b_var)",
+    "    m_sal_u = fit_xgb(**tuned); m_sal_u.fit(train[X_cols_s1b_var].values, train[\"sales_cost_var_unit\"].values, sample_weight=w_s1b_var)",
+    "    m_fix_mfg = fit_xgb(**tuned); m_fix_mfg.fit(train[X_cols_s1b_fix].values, train[\"manufacturing_cost_fix\"].values, sample_weight=w_s1b_fix)",
+    "    m_fix_sal = fit_xgb(**tuned); m_fix_sal.fit(train[X_cols_s1b_fix].values, train[\"sales_cost_fix\"].values, sample_weight=w_s1b_fix)",
+    "    m_fix_mai = fit_xgb(**tuned); m_fix_mai.fit(train[X_cols_s1b_fix].values, train[\"maintenance_cost_fix\"].values, sample_weight=w_s1b_fix)",
+    "    for df in (train, pred):",
+    "        df[\"mfg_cost_var_unit_pred\"] = m_mfg_u.predict(df[X_cols_s1b_var].values)",
+    "        df[\"sales_cost_var_unit_pred\"] = m_sal_u.predict(df[X_cols_s1b_var].values)",
+    "        df[\"manufacturing_cost_var_pred\"] = df[\"mfg_cost_var_unit_pred\"] * df[\"sales_volume\"]",
+    "        df[\"sales_cost_var_pred\"] = df[\"sales_cost_var_unit_pred\"] * df[\"sales_volume\"]",
+    "        df[\"manufacturing_cost_fix_pred\"] = m_fix_mfg.predict(df[X_cols_s1b_fix].values)",
+    "        df[\"sales_cost_fix_pred\"] = m_fix_sal.predict(df[X_cols_s1b_fix].values)",
+    "        df[\"maintenance_cost_fix_pred\"] = m_fix_mai.predict(df[X_cols_s1b_fix].values)",
+    "",
+    "correction_factors = {}",
+    "for actual_col, pred_col in cost_pairs:",
+    "    total_pred = train[pred_col].sum()",
+    "    factor = (train[actual_col].sum() / total_pred) if total_pred != 0 else 1.0",
+    "    correction_factors[pred_col] = factor",
+    "    for df in (train, pred):",
+    "        df[pred_col] *= factor",
+    "print(\"Correction factors:\", correction_factors)",
+    ""
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -1008,31 +1058,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stage2 — Base + Residual\n",
-    "def compute_op_base(df):\n",
-    "    return df[\"net_sales_pred\"] - df[\"raw_material\"] - (\n",
-    "        df[\"manufacturing_cost_var_pred\"] + df[\"manufacturing_cost_fix_pred\"] +\n",
-    "        df[\"sales_cost_var_pred\"] + df[\"sales_cost_fix_pred\"] + df[\"maintenance_cost_fix_pred\"]\n",
-    "    )\n",
-    "train[\"op_base\"] = compute_op_base(train); pred[\"op_base\"] = compute_op_base(pred)\n",
-    "train[\"op_resid\"] = train[\"operating_profit\"] - train[\"op_base\"]\n",
-    "\n",
-    "RESID_FEATURES = [\n",
-    "    \"op_base\",\"raw_material\",\n",
-    "    \"manufacturing_cost_var_pred\",\"manufacturing_cost_fix_pred\",\n",
-    "    \"sales_cost_var_pred\",\"sales_cost_fix_pred\",\"maintenance_cost_fix_pred\",\n",
-    "    \"price_per_unit_pred\",\"spread_price_raw\",\n",
-    "    \"linked_share\",\"regime\",\"month\",\"quarter\",\"month_sin\",\"month_cos\"\n",
-    "]\n",
-    "w_resid = make_time_weights(train[\"date\"], 9, 0.10)\n",
-    "model_resid = xgb.XGBRegressor(n_estimators=800, learning_rate=0.05, max_depth=5, subsample=0.9, colsample_bytree=0.9,\n",
-    "                               objective=\"reg:squarederror\", random_state=42, n_jobs=0)\n",
-    "model_resid.fit(train[RESID_FEATURES].values, train[\"op_resid\"].values, sample_weight=w_resid)\n",
-    "train[\"op_resid_pred\"] = model_resid.predict(train[RESID_FEATURES].values)\n",
-    "pred[\"op_resid_pred\"]  = model_resid.predict(pred[RESID_FEATURES].values)\n",
-    "train[\"op_pred\"] = train[\"op_base\"] + train[\"op_resid_pred\"]\n",
-    "pred[\"op_pred\"]  = pred[\"op_base\"]  + pred[\"op_resid_pred\"]\n",
-    "train[\"op_adj\"] = train[\"op_pred\"]; pred[\"op_adj\"] = pred[\"op_pred\"]"
+    "",
+    "# Stage2 — Base + Residual",
+    "def compute_op_base(df):",
+    "    return df[\"net_sales_pred\"] - df[\"raw_material\"] - (",
+    "        df[\"manufacturing_cost_var_pred\"] + df[\"manufacturing_cost_fix_pred\"] +",
+    "        df[\"sales_cost_var_pred\"] + df[\"sales_cost_fix_pred\"] + df[\"maintenance_cost_fix_pred\"]",
+    "    )",
+    "train[\"op_base\"] = compute_op_base(train); pred[\"op_base\"] = compute_op_base(pred)",
+    "train[\"op_resid\"] = train[\"operating_profit\"] - train[\"op_base\"]",
+    "",
+    "RESID_FEATURES = [",
+    "    \"op_base\",\"raw_material\",",
+    "    \"manufacturing_cost_var_pred\",\"manufacturing_cost_fix_pred\",",
+    "    \"sales_cost_var_pred\",\"sales_cost_fix_pred\",\"maintenance_cost_fix_pred\",",
+    "    \"price_per_unit_pred\",\"spread_price_raw\",",
+    "    \"linked_share\",\"regime\",\"month\",\"quarter\",\"month_sin\",\"month_cos\"",
+    "]",
+    "w_resid = make_time_weights(train[\"date\"], 9, 0.10)",
+    "model_resid = xgb.XGBRegressor(n_estimators=800, learning_rate=0.05, max_depth=5, subsample=0.9, colsample_bytree=0.9,",
+    "                               objective=\"reg:squarederror\", random_state=42, n_jobs=0)",
+    "model_resid.fit(train[RESID_FEATURES].values, train[\"op_resid\"].values, sample_weight=w_resid)",
+    "train[\"op_resid_pred\"] = model_resid.predict(train[RESID_FEATURES].values)",
+    "pred[\"op_resid_pred\"]  = model_resid.predict(pred[RESID_FEATURES].values)",
+    "",
+    "# Recompute operating profit base and predictions after cost corrections",
+    "train[\"op_base\"] = compute_op_base(train); pred[\"op_base\"] = compute_op_base(pred)",
+    "train[\"op_pred\"] = train[\"op_base\"] + train[\"op_resid_pred\"]",
+    "pred[\"op_pred\"]  = pred[\"op_base\"]  + pred[\"op_resid_pred\"]",
+    "train[\"op_adj\"] = train[\"op_pred\"]; pred[\"op_adj\"] = pred[\"op_pred\"]",
+    ""
    ]
   },
   {
